--- a/config.yaml
+++ b/config.yaml
@@ -14,6 +14,8 @@ TRAIN_VAL_TEST_SPLIT:
 NUM_EPOCHS: 25
 BATCH_SIZE: 64
 LEARNING_RATE: 0.001
+ALPHA : 100
+BETA : 0.8
 
 # output
 RESULTS_DIR: "C:\\\\Users\\\\ANDRE\\\\OneDrive\\\\Desktop\\\\Andreas_Sideras\\\\Demokritos\\\\Msc in AI\\\\2nd Semester\\\\Deep Learning\\\\Classification and Localization of Inpainted Regions\\\\Classification and Localization\\\\Results"
